@@ -188,6 +188,7 @@
                     <exclude>com/onthegomap/planetiler/util/log4j/**</exclude>
                   </excludes>
                 </filter>
+                <!--
                 <filter>
                   <artifact>org.apache.logging.log4j:log4j-core</artifact>
                   <includes>
@@ -195,6 +196,7 @@
                     <include>org/apache/logging/log4j/core/util/CloseShieldOutputStream.class</include>
                   </includes>
                 </filter>
+                -->
               </filters>
             </configuration>
             <executions>
@@ -219,12 +221,45 @@
       </build>
     </profile>
     <profile>
-      <id>native</id>
+      <id>native-compile</id>
+      <activation>
+        <property>
+          <name>native</name>
+        </property>
+      </activation>
       <dependencies>
         <dependency>
           <groupId>com.onthegomap.planetiler</groupId>
           <artifactId>planetiler-benchmarks</artifactId>
           <version>${project.parent.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>com.onthegomap.planetiler</groupId>
+              <artifactId>planetiler-core</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.apache.logging.log4j</groupId>
+              <artifactId>log4j-slf4j2-impl</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.apache.logging.log4j</groupId>
+              <artifactId>log4j-api</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.apache.logging.log4j</groupId>
+              <artifactId>log4j-core</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>com.github.jnr</groupId>
+              <artifactId>jnr-ffi</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <dependency>
+          <groupId>com.onthegomap.planetiler</groupId>
+          <artifactId>planetiler-core-native</artifactId>
+          <version>${project.parent.version}</version>
+          <!--<classifier>native</classifier>-->
           <exclusions>
             <exclusion>
               <groupId>org.apache.logging.log4j</groupId>
@@ -248,21 +283,39 @@
           <groupId>org.openmaptiles</groupId>
           <artifactId>planetiler-openmaptiles</artifactId>
           <version>${project.parent.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>com.onthegomap.planetiler</groupId>
+              <artifactId>planetiler-core</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
         <dependency>
           <groupId>com.onthegomap.planetiler</groupId>
           <artifactId>planetiler-custommap</artifactId>
           <version>${project.parent.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>com.onthegomap.planetiler</groupId>
+              <artifactId>planetiler-core</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
         <dependency>
           <groupId>com.onthegomap.planetiler</groupId>
           <artifactId>planetiler-examples</artifactId>
           <version>${project.parent.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>com.onthegomap.planetiler</groupId>
+              <artifactId>planetiler-core</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
         <dependency>
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-classic</artifactId>
-          <version>1.4.14</version>
+          <version>1.4.1</version>
         </dependency>
         <dependency>
           <groupId>org.slf4j</groupId>
@@ -272,23 +325,33 @@
         <dependency>
           <groupId>net.java.dev.jna</groupId>
           <artifactId>jna</artifactId>
-          <version>5.14.0</version>
+          <version>5.8.0</version>
         </dependency>
         <dependency>
           <groupId>net.java.dev.jna</groupId>
           <artifactId>jna-platform</artifactId>
-          <version>5.14.0</version>
+          <version>5.8.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.44.1.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.lucene</groupId>
+          <artifactId>lucene-misc</artifactId>
+          <version>7.7.2</version>
         </dependency>
       </dependencies>
-      <build>
+        <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration combine.self="override">
               <compilerArgs>
-                <arg>--add-exports</arg>
-                <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                 <arg>-proc:full</arg>
               </compilerArgs>
               <includes>
@@ -296,6 +359,71 @@
               </includes>
             </configuration>
           </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>native-shade</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+              <artifactSet>
+                <excludes>
+                  <exclude>com.onthegomap.planetiler:planetiler-core</exclude>
+                  <excluse>org.apache.logging.log4j:*</excluse>
+                  <excluse>com.github.jnr:*</excluse>
+                </excludes>
+              </artifactSet>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <manifestEntries>
+                    <Multi-Release>true</Multi-Release>
+                  </manifestEntries>
+                </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>${mainClass}</mainClass>
+                </transformer>
+              </transformers>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+                <filter>
+                  <artifact>com.onthegomap.planetiler:*</artifact>
+                  <excludes>
+                    <exclude>com/onthegomap/planetiler/util/log4j/**</exclude>
+                  </excludes>
+                </filter>
+              </filters>
+            </configuration>
+            <executions>
+              <execution>
+                <id>native-shade</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>shade</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>native</id>
+      <build>
+        <plugins>
           <plugin>
             <groupId>org.graalvm.buildtools</groupId>
             <artifactId>native-maven-plugin</artifactId>
@@ -305,7 +433,7 @@
               <execution>
                 <id>build-native</id>
                 <goals>
-                  <goal>build</goal>
+                  <goal>compile-no-fork</goal>
                 </goals>
                 <phase>package</phase>
               </execution>
@@ -337,9 +465,9 @@
               <fallback>false</fallback>
               <verbose>true</verbose>
               <mainClass>${mainClass}</mainClass>
-              <!-- - -initialize-at-build-time=org.geotools.util.factory.FactoryRegistry - -initialize-at-build-time=java.awt.Color - -initialize-at-build-time=com.onthegomap.planetiler.util.Madvise -H:-InlineBeforeAnalysis -H:+SupportPredefinedClasses -Djava.awt.headless=true  -->
               <buildArgs>
-                <arg>-Djava.awt.headless=false --initialize-at-run-time=java.awt.Toolkit,org.geotools.util.factory.FactoryRegistry,org.geotools.data.util.ColorConverterFactory -R:MaxJavaStackTraceDepth=0 -H:+UnlockExperimentalVMOptions -H:+UseServiceLoaderFeature -march=native -H:+DashboardAll -H:EnableURLProtocols=http,https,file</arg>
+                <!-- - -add-exports=java.base/sun.nio.ch=ALL-UNNAMED - -initialize-at-run-time=java.awt.Toolkit,org.geotools.util.factory.FactoryRegistry,org.geotools.data.util.ColorConverterFactory  -->
+                <arg>-Djava.awt.headless=false -R:MaxJavaStackTraceDepth=0 -H:+UnlockExperimentalVMOptions -H:+UseServiceLoaderFeature -march=native -H:+DashboardAll -H:EnableURLProtocols=http,https,file</arg>
               </buildArgs>
               <imageName>planetiler</imageName>
             </configuration>
@@ -362,8 +490,16 @@
                   <executable>java</executable>
                   <workingDirectory>${project.build.directory}</workingDirectory>
                   <arguments>
-                    <argument>--add-exports</argument>
-                    <argument>java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</argument>
+                    <argument>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</argument>
+                    <argument>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
                     <argument>-Djava.awt.headless=true</argument>
                     <argument>-Djava.library.path=${env.JAVA_HOME}/lib</argument>
                     <argument>-classpath</argument>
